# Redforge

./: .env  .env.development  .env.example  .env.production  .env.staging  .env.testing  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD.md  DEPLOYMENT.md  DISTRIBUTED.md  GEMINI.md  IMPLEMENTATION_ROADMAP.md  INSTALL.md  OBSERVABILITY.md  PLUGIN_GUIDE.md  README.md  SECURITY.md  benchmark_report.json  build_registry.py  config.yaml  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  style-format-black-check-summary.txt  style-format-black-files.txt  style-format-black.patch  update_agent.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  lint.yml  release.yml  security.yml  test.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.json
dashboard/src/: App.tsx  index.css
docker/: Dockerfile  docker-compose.yml
docs/: API_REFERENCE.md  engineering_notes.md  mcp_integration_guide.md  plugin_developer_guide.md  redforge_tui_claude_code_style_plan.md
helm/: Chart.yaml  values.yaml
k8s/: deployment.yaml
scratch/: audit_skills.py  optimize_tool_skills.py
scripts/: build_registry.py  install.sh  uninstall.sh  update.sh
skills/: registry.json
skills/BUGBOUNTY/: 01_recon.md
skills/CTF/: 01_web.md
skills/EXECUTION/: execution_workflow.md
skills/LLM/: 01_provider_config.md  02_prompt_engineering.md  03_response_optimization.md  04_model_selection.md  05_context_management.md
skills/MODES/: coding.md
skills/SAFETY/: 01_ethics.md  01_scope.md  02_scope_verification.md  03_data_handling.md  04_scope_definition.md  05_incident_response.md  06_legal_compliance.md  07_responsible_disclosure.md  08_testing_checklist.md  09_ethics_framework.md  10_data_privacy.md
skills/SYSTEM/: 01_persona.md  01_prompt.md  02_capabilities.md  02_modes.md  03_memory_usage.md  04_session_mgmt.md  05_ethics.md  intent_detection.md  session_awareness.md
skills/TOOLS/: 01_recon_tools.md  02_web_tools.md  03_binary_tools.md  04_forensics_tools.md  05_password_tools.md  06_network_tools.md  07_exploitation_tools.md  08_vulnerability_scanners.md  09_container_cloud.md  10_wireless_tools.md
skills/core/: anti_hallucination.md  data_handling_and_privacy.md  reporting_standards.md  scope_and_authorization.md
src/redforge/: __init__.py  __main__.py  app.py  cli.py  main.py
src/redforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  performance_benchmarks.py  test_backend_events.py  test_commands.py  test_core.py  test_palette.py  test_redforge.py  test_skill_hierarchy.py  test_target_consistency.py  test_v2_architecture.py
tests/integration/: test_end_to_end.py  test_full_session.py
tests/unit/: test_api_gateway.py  test_conversation_v2.py  test_distributed.py  test_evidence.py  test_executor.py  test_intent_engine.py  test_memory_manager.py  (+19 more)
(+487 files in other folders)
