[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redforge"
version = "0.1.0"
description = "Autonomous CLI-based Penetration Testing AI Agent"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "RedForge Team"}]
requires-python = ">=3.10"
keywords = ["pentesting", "security", "ai-agent", "bugbounty", "ctf", "cli", "red-team", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Agent/LLM Core
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
    
    # Vector/Memory
    "qdrant-client>=1.7.0",
    
    # Data/Config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # CLI/UI
    "typer>=0.9.0",
    "rich>=13.7.0",
    "textual>=0.80.0",
    
    # Network
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    
    # Utilities
    "distro>=1.8.0",
    "platformdirs>=4.2.0",
    "cryptography>=42.0.0",
    "keyring>=24.3.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]
gemini = ["google-genai>=0.3.0"]
openai = ["openai>=1.10.0"]
anthropic = ["anthropic>=0.18.0"]
groq = ["groq>=0.5.0"]
ollama = ["ollama>=0.1.0"]
web = ["fastapi>=0.109.0", "uvicorn>=0.27.0", "websockets>=12.0", "jinja2>=3.1.0"]
all = ["redforge[gemini,openai,anthropic,groq,ollama,web]"]

[project.scripts]
redforge = "redforge.cli:main"

[project.urls]
Homepage = "https://github.com/redforge/redforge"
Documentation = "https://docs.redforge.dev"
Repository = "https://github.com/redforge/redforge"
Issues = "https://github.com/redforge/redforge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redforge = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
